# machine-learning-zoomcamp-hw05

./: Dockerfile  Q3.py  Q4-client.py  Q4-server.py  Q5-server.py  README.md  extract_hash.py  pyproject.toml  run.sh
