[project]
name = "machine-learning-zoomcamp-hw05"
version = "0.1.0"
description = "DataTalksClub · Machine Learning Zoomcamp 2025 · Homework 5"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.1",
    "scikit-learn==1.6.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
